# web3-phishing-detector

./: .gitignore  README.md  index.html  objective.md  requirements.txt  script.js  setup.py  styles.css
backend/: pyproject.toml  vercel.json
backend/api/: predict.py
backend/src/: __init__.py
backend/src/app/: main.py
backend/src/app/static/: index.html
backend/src/data/: __init__.py  dataset.py  preprocess.py
backend/src/models/: phishing_detector.py
backend/src/training/: __init__.py  train.py
backend/tests/: test_data.py
data/: data.ipynb
frontend/: config.ts  next.config.mjs  package.json  vercel.json
frontend/app/: page.tsx
src/models/: __init__.py
tests/: test_model.py
